Improved overall layout preventing calc overflow

--- a/css/basic.css
+++ b/css/basic.css
@@ -33,8 +33,9 @@ main{
 }
 
 .calculator{
-    width:380px;
-    background:#111827;
+    width:100%;
+    max-width:380px;
+    background:#22396d;
     border-radius:20px;
     padding:20px;
     border:1px solid rgba(255,255,255,0.08);
@@ -51,6 +52,7 @@ main{
     padding:20px;
     font-size:2.2rem;
     overflow:hidden;
+    word-break:break-all;
 }
 
 .buttons{
@@ -66,8 +68,7 @@ button{
     cursor:pointer;
     font-size:1.1rem;
     background:#1e293b;
-    color:rgb(255, 255, 255);
-    transition:0.2s;
+    color:white;
 }
 
 button:hover{
@@ -82,13 +83,18 @@ button:last-child:hover{
     background:#1d4ed8;
 }
 
-@media(max-width:500px){
+@media(max-width:600px){
 
     body{
         padding:15px;
     }
 
-    .calculator{
-        width:100%;
+    .display{
+        font-size:1.8rem;
+    }
+
+    button{
+        height:58px;
+        font-size:1rem;
     }
 }
