--- a/css/bmi.css
+++ b/css/bmi.css
@@ -7,7 +7,7 @@
 body{
     min-height:100vh;
     font-family:Arial,sans-serif;
-    background:#f1f5f9;
+    background:#7fa2c5;
     padding:30px;
     color:#0f172a;
 }
@@ -34,7 +34,7 @@ main{
 
 .bmi-card{
     width:450px;
-    background:white;
+    background:rgb(159, 212, 199);
     padding:30px;
     border-radius:20px;
     box-shadow:0 15px 35px rgba(0,0,0,0.08);
@@ -64,7 +64,7 @@ main{
     height:55px;
     border:none;
     border-radius:10px;
-    background:#2563eb;
+    background:#d46423;
     color:white;
     font-size:1rem;
     cursor:pointer;
@@ -72,7 +72,7 @@ main{
 }
 
 #calculate-btn:hover{
-    background:#1d4ed8;
+    background:#cfa225;
 }
 
 .result-box{
@@ -105,5 +105,21 @@ main{
 
     .bmi-card{
         width:100%;
+    }
+}
+
+@media(max-width:600px) {
+
+    body{
+        padding:15px;
+    }
+
+    .bmi-card {
+        width: 100%;
+        padding:22px;
+    }
+
+    #bmi-value {
+        font-size:2.2rem;
     }
 }
